// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineGraphRenderer Tests Base Rendering 1`] = `<svg />`;

exports[`LineGraphRenderer Tests Base Rendering 2`] = `
<svg>
  <g
    id="lineChart0"
  >
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="xAxis"
      text-anchor="middle"
      transform="translate(0,570)"
    >
      <path
        class="domain"
        d="M40.5,0.5H770.5"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(405.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          1970
        </text>
      </g>
    </g>
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="yAxis"
      text-anchor="end"
      transform="translate(40,0)"
    >
      <g
        class="tick"
        opacity="1"
        transform="translate(0,295.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="730"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <text
        fill="currentColor"
        text-anchor="start"
        x="-40"
        y="10"
      />
    </g>
    <path
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
    <g
      style="pointer-events: none;"
    />
  </g>
</svg>
`;

exports[`LineGraphRenderer Tests With Data and Updates 1`] = `
<svg>
  <g
    id="lineChart0"
  >
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="xAxis"
      text-anchor="middle"
      transform="translate(0,570)"
    >
      <path
        class="domain"
        d="M40.5,0.5H770.5"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(40.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          .001
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(405.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          .002
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(770.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          .003
        </text>
      </g>
    </g>
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="yAxis"
      text-anchor="end"
      transform="translate(40,0)"
    >
      <g
        class="tick"
        opacity="1"
        transform="translate(0,570.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="730"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,533.8333333333334)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="730"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          2
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,497.1666666666667)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="730"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          4
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,460.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="730"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          6
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,423.83333333333337)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="730"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          8
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,387.16666666666674)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="730"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,350.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="730"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          12
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,313.8333333333333)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="730"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          14
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,277.1666666666667)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="730"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          16
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,240.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="730"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          18
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,203.83333333333337)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="730"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,167.16666666666669)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="730"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          22
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,130.49999999999997)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="730"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          24
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,93.83333333333331)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="730"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          26
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,57.16666666666666)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="730"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          28
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,20.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="730"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30
        </text>
      </g>
      <text
        fill="currentColor"
        text-anchor="start"
        x="-40"
        y="10"
      />
    </g>
    <path
      d="M40,386.66666666666674L405,203.33333333333337L770,20"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
    <g
      style="pointer-events: none;"
    />
  </g>
</svg>
`;

exports[`LineGraphRenderer Tests With Data and Updates 2`] = `
<svg>
  <g
    id="lineChart0"
  >
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="xAxis"
      text-anchor="middle"
      transform="translate(0,267)"
    >
      <path
        class="domain"
        d="M444.5,0.5H578.5"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(444.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          1970
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(471.30000000000007,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          .001
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(498.1,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          .002
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(524.9000000000001,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          .003
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(551.7,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          .004
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(578.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          .005
        </text>
      </g>
    </g>
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="yAxis"
      text-anchor="end"
      transform="translate(444,0)"
    >
      <g
        class="tick"
        opacity="1"
        transform="translate(0,267.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,251.9)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,236.3)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,220.7)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,205.1)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,189.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,173.9)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,158.3)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          35.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,142.7)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          40.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,127.1)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          45.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,111.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          50.00
        </text>
      </g>
      <text
        fill="currentColor"
        text-anchor="start"
        x="-444"
        y="10"
      >
        Values in range
      </text>
    </g>
    <path
      d="M470.80000000000007,235.8L497.6,204.6L524.4000000000001,173.4"
      fill="none"
      stroke="#00FF00"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <g
      style="pointer-events: none;"
    />
  </g>
</svg>
`;

exports[`LineGraphRenderer Tests With Data and Updates 3`] = `
<svg>
  <g
    id="lineChart0"
  >
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="xAxis"
      text-anchor="middle"
      transform="translate(0,267)"
    >
      <path
        class="domain"
        d="M444.5,0.5H578.5"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(511.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          Fri 13
        </text>
      </g>
    </g>
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="yAxis"
      text-anchor="end"
      transform="translate(444,0)"
    >
      <g
        class="tick"
        opacity="1"
        transform="translate(0,267.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,251.9)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,236.3)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,220.7)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,205.1)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,189.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,173.9)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,158.3)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          35.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,142.7)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          40.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,127.1)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          45.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,111.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          50.00
        </text>
      </g>
      <text
        fill="currentColor"
        text-anchor="start"
        x="-444"
        y="10"
      >
        Values in range
      </text>
    </g>
    <path
      d="M511,135.96Z"
      fill="none"
      stroke="#00FF00"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <g
      style="pointer-events: none;"
    />
  </g>
</svg>
`;

exports[`LineGraphRenderer Tests With Data and Updates 4`] = `
<svg>
  <g
    id="lineChart0"
  >
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="xAxis"
      text-anchor="middle"
      transform="translate(0,267)"
    >
      <path
        class="domain"
        d="M444.5,0.5H578.5"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(511.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          1970
        </text>
      </g>
    </g>
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="yAxis"
      text-anchor="end"
      transform="translate(444,0)"
    >
      <g
        class="tick"
        opacity="1"
        transform="translate(0,267.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,251.9)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,236.3)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,220.7)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,205.1)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,189.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,173.9)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,158.3)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          35.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,142.7)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          40.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,127.1)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          45.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,111.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          50.00
        </text>
      </g>
      <text
        fill="currentColor"
        text-anchor="start"
        x="-444"
        y="10"
      >
        Values in range
      </text>
    </g>
    <path
      fill="none"
      stroke="#00FF00"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <g
      style="pointer-events: none;"
    />
  </g>
</svg>
`;

exports[`LineGraphRenderer Tests With Data and Updates 5`] = `
<svg>
  <g
    id="lineChart0"
  >
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="xAxis"
      text-anchor="middle"
      transform="translate(0,267)"
    >
      <path
        class="domain"
        d="M444.5,0.5H578.5"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(511.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          1970
        </text>
      </g>
    </g>
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="yAxis"
      text-anchor="end"
      transform="translate(444,0)"
    >
      <g
        class="tick"
        opacity="1"
        transform="translate(0,267.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,251.9)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,236.3)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,220.7)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,205.1)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,189.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,173.9)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,158.3)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          35.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,142.7)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          40.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,127.1)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          45.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,111.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="134"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          50.00
        </text>
      </g>
      <text
        fill="currentColor"
        text-anchor="start"
        x="-444"
        y="10"
      >
        Values in range
      </text>
    </g>
    <path
      fill="none"
      stroke="#00FF00"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <g
      style="pointer-events: none; display: none;"
      transform="translate(undefined,undefined)"
    >
      <path
        d="M-10,5H-5l5,-5l5,5H10v20h-20z"
        fill="white"
        stroke="black"
      />
      <path
        d="M-10,5H-5l5,-5l5,5H10v20h-20z"
        fill="white"
        stroke="black"
      />
      <text
        transform="translate(0,15)"
      >
        <tspan
          font-weight="bold"
          x="0"
          y="0em"
        >
           NaN, 0NaN
        </tspan>
        <tspan
          x="0"
          y="1.1em"
        >
          NaN
        </tspan>
      </text>
      <text
        transform="translate(0,15)"
      >
        <tspan
          font-weight="bold"
          x="0"
          y="0em"
        >
           NaN, 0NaN
        </tspan>
        <tspan
          x="0"
          y="1.1em"
        >
          NaN
        </tspan>
      </text>
    </g>
  </g>
</svg>
`;
